tests/errors/err_box_non_zone.mix
// ERROR: argument 1 of 'box': expected Zone
main()
    x = box(1, 2)
